# CudNN

./: .gitignore  .sconsign.dblite  CMakeLists.txt  CMakeSettings.json  CudNN.sln  CudNN.vcxproj  CudNN.vcxproj.filters  DenseConnections.cpp  DenseConnections.cu  DenseConnections.h  DenseLSTMLayer.cpp  DenseLSTMLayer.h  DenseNeuronLayer.cpp  DenseNeuronLayer.h  GAE.cu  GAE.cuh  HashTable.h  IConnections.cpp  IConnections.cu  IConnections.h  ILayer.cpp  ILayer.cu  ILayer.h  LSMTLayer.cpp  LSMTLayer.h  LSTMLayer.cpp  LSTMLayer.cu  LSTMLayer.h  NN.cpp  NN.cu  NN.h  NN_constructor.cpp  NN_constructor.h  NN_enums.h  NN_socket_interpreter.cpp  NN_socket_interpreter.cu  NN_socket_interpreter.h  NeatConnections.cpp  NeatConnections.cu  NeatConnections.h  (+38 more)
.github/workflows/: flawfinder.yml
Include/: NN.h  NN_constructor.h  costs.cuh  data_type.h  neuron_operations.cuh
godot/: register_types.cpp
socket_client/: CMakeLists.txt  NN_client.cpp  NN_client.h  NN_constructor_client.cpp  NN_constructor_client.h  NN_enums.h  client.cpp  client.h  pointer_array.cpp  pointer_array.h  str.h
socket_client/test_main/: test_main.cpp
src/: CMakeLists.txt  ILayer.cu  ILayer.h  NN.h  NN_constructor.h  connection_gradients.cu  costs.cuh  cuda_functionality.cu  godot_register_types.cpp  linear_functions.cu  linear_functions.cuh  neuron_operations.cu
